Replace deprecated newInstance invocation
Change-Id: Ic74611cc3203ef12dd58f7c2134f52c85a4a2ecc